# osu-lazer-manager

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  quick-install.sh
.github/: FUNDING.yml
.github/workflows/: clippy-check.yml  test.yml
assets/: osu!lazer.desktop
src/: config.rs  constants.rs  fetcher.rs  fix.rs  get_default.rs  install.rs  lib.rs  list.rs  main.rs  paths.rs  printer.rs  run.rs  set_default.rs  tests.rs  uninstall.rs  update.rs
src/fetcher/: appimage.rs  desktop.rs  icon.rs  mod.rs
src/utils/: directories.rs  mod.rs  version.rs
