[package]
name = "osu-lazer-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
dirs = "5.0.1"
futures-util = "0.3.28"
indicatif = "0.17.6"
ini = "1.3.0"
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
scraper = "0.17.1"
tokio = { version = "1.31.0", features = ["full"] }
