[package]
name = "osu-lazer-manager"
version = "1.0.1"
edition = "2021"
description = "Manages osu!lazer"
license = "MIT"
homepage = "https://github.com/nanashi-1/osu-lazer-manager"
repository = "https://github.com/nanashi-1/osu-lazer-manager"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.3.1", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
futures-util = "0.3.28"
indicatif = "0.17.6"
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
scraper = "0.17.1"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.31.0", features = ["full"] }
toml = "0.8.14"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.16.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
